cmake_minimum_required(VERSION 3.16)
project(SubWindow VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets Core Gui)

add_executable(SubWindow
    # UI Components
    ../components/Button.cpp  # Write paths to UI Components correctly.
    ../components/SmoothOpacity.cpp  
    ../components/SmoothShadow.cpp  
)

target_link_libraries(SubWindow PRIVATE Qt6::Widgets Qt6::Gui Qt6::Core dwmapi user32)



